--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-font": "^11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -23,8 +25,10 @@
     "react-hook-form": "^7.52.1",
     "react-native": "0.73.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-root-toast": "^3.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "expo-image-picker": "~14.7.1"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
