--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-root-toast": "^3.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
