--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.6.8",
+    "axios": "^1.7.3",
     "expo": "~50.0.14",
     "expo-font": "^11.10.3",
     "expo-image-picker": "~14.7.1",
@@ -26,8 +27,7 @@
     "react-native": "0.73.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-root-toast": "^3.6.0",
-    "react-native-vector-icons": "^10.1.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
