--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
-    "expo": "~50.0.14",
-    "expo-font": "^11.10.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.27",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-root-toast": "^3.6.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true,
   "author": "",
