--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -26,10 +27,13 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.0",
     "react-native-root-toast": "^3.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
