--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-reanimated": "^3.15.0",
     "react-native-root-toast": "^3.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "react-native-safe-area-context": "4.10.5",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
