--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
@@ -18,11 +19,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
     "expo": "^51.0.27",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "form-data": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
@@ -32,10 +35,9 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.15.0",
     "react-native-root-toast": "^3.6.0",
-    "react-native-vector-icons": "^10.1.0",
-    "tailwindcss": "3.3.2",
     "react-native-safe-area-context": "4.10.5",
-    "expo-file-system": "~17.0.1"
+    "react-native-vector-icons": "^10.1.0",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
