--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^51.0.27",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.13.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.5",
+    "react-native-fade-loading": "^1.0.1",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
