--- a/package.json
+++ b/package.json
@@ -18,26 +18,25 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
-    "expo": "^51.0.27",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.11",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.2",
+    "expo-image-picker": "~16.0.3",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-splash-screen": "~0.29.13",
+    "expo-status-bar": "~2.0.0",
     "form-data": "^4.0.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-native": "0.74.5",
+    "react-native": "^0.76.3",
     "react-native-fade-loading": "^1.0.1",
-    "react-native-gesture-handler": "^2.18.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.15.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6.0",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-vector-icons": "^10.1.0",
     "tailwindcss": "3.3.2"
   },
@@ -47,5 +46,12 @@
   "private": true,
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
